# GraviTool1.0Windows

./: CMakeLists.txt  README.md
WinBGIFilesDIR/: WORKING_SOURCE_FILE.cpp
